# Butterscotch

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: binary_utils.h  bytecode_versions.h  collision.h  common.h  data_win.c  data_win.h  file_system.h  instance.c  instance.h  json_reader.c  noop_file_system.c  overlay_file_system.c  profiler.c  real_type.h  renderer.h  runner.c  runner.h  rvalue.h  spatial_grid.c  utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/audio/openal/: al_audio_system.h
src/audio/web/: web_audio_system.c
src/d3d9/: d3d9_main.c  d3d9_renderer.c  d3d9_renderer.h  stb_impl.c
src/gl/: gl_renderer.c  gl_renderer.h
src/gl_common/: gl_common.c  gl_common.h
src/gl_legacy/: gl_legacy_renderer.c  gl_legacy_renderer.h
src/glfw/: main.c
src/ps2/: gs_renderer.c  gs_renderer.h  main.c  ps2_file_system.c  ps2_overlay.c
src/ps3/: main.c  paletted.fcg  paletted.fpo  paletted_fpo.c  ps3_textures.c  ps3_textures.h
src/sdl/: main.c
src/web/: main.c
